kubernetes/ftest-kubernetes-wildfly-bootable-jar/src/test/resources/hello-world-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-world-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-svc
                port:
                  number: 8080
